# agents-manager-crewai

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
src/aicrew/: crew.py  custom_agents.py  custom_tasks.py  main.py
src/aicrew/models/: models.py
src/aicrew/tools/: custom_tool.py
src/aicrew/utils/: qdrant_singleton.py
